--- a/client/src/styles/workPerson.css
+++ b/client/src/styles/workPerson.css
@@ -84,3 +84,46 @@
 .work__person .card-body .share i{
     margin-right: 0!important;
 }
+@media (max-width: 900px) {
+    .work__person{
+        margin-top: 50px;
+    }
+    .work__person .col-8{
+        margin-left: 0;
+        margin-right: 0;
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+}
+@media (max-width: 768px) {
+    .work__person .card-body{
+        display: block;
+        text-align: center;
+    }
+    .work__person .card-body .left{
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+    .work__person .card-body .right{
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+    .work__person .card-body a{
+        margin: 20px auto;
+    }
+    .work__person .card-body .right .d-flex{
+        display: block!important;
+    }
+    .work__person .card-body .shares{
+        width: 10%;
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+    }
+    .work__person .card-header h5 span{
+        display: block;
+    }
+    .work__person .card-header h5 .sub__span{
+        display: inline;
+    }
+}
