--- a/client/src/styles/about.css
+++ b/client/src/styles/about.css
@@ -56,3 +56,23 @@
     background-color: #ffffff;
     color: #01384D;
 }
+@media (max-width: 900px) {
+    .about {
+        margin-top: 30px;
+    }
+    .about h1{
+        text-align: center;
+    }
+    .about  p{
+        /*text-align: justify;*/
+        margin-top: 20px;
+    }
+    .about .col-6{
+        flex: 0 0 100%;
+        max-width: 100%;
+        margin-top: 20px;
+    }
+    .about .col-6:first-child{
+        margin-top: 0!important;
+    }
+}
